--- a/package.json
+++ b/package.json
@@ -23,20 +23,27 @@
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/splash-screen": "~4.11.0",
-    "@ionic-native/status-bar": "^4.11.0",
+    "@ionic-native/status-bar": "^4.15.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
+    "@ngrx/store-devtools": "^5.2.0",
+    "angularfire2": "^5.0.0-rc.11",
+    "cordova-android": "6.4.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.0.3",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^5.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "moment": "^2.22.1",
+    "ngrx-store-localstorage": "^5.0.0",
+    "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
@@ -50,7 +57,9 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-inappbrowser": {}
