--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,11 @@
   "integrations": {
     "cordova": {}
   },
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies": [
+    {
+      "path": "/child01s",
+      "proxyUrl": "http://ngopii.com/sdgc/public/api/child01s"
+    }
+  ]
 }
