--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-wkwebview-engine": "^1.1.4",
+    "cordova-plugin-wkwebview-file-xhr": "^2.1.1",
     "firebase": "^5.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -62,7 +64,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-wkwebview-file-xhr": {}
     },
     "platforms": [
       "android",
