--- a/package.json
+++ b/package.json
@@ -30,16 +30,12 @@
     "@ngrx/store-devtools": "^5.2.0",
     "angularfire2": "^5.0.0-rc.11",
     "cordova-android": "6.4.0",
-    "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-wkwebview-engine": "^1.1.4",
-    "cordova-plugin-wkwebview-file-xhr": "^2.1.1",
     "firebase": "^5.4.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -59,17 +55,12 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-wkwebview-file-xhr": {}
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "android"
     ]
   }
 }
