--- a/package.json
+++ b/package.json
@@ -29,10 +29,9 @@
     "@ngrx/store": "^5.2.0",
     "@ngrx/store-devtools": "^5.2.0",
     "angularfire2": "^5.0.0-rc.11",
-    "cordova-android": "6.4.0",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-android": "8.0.0",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -41,6 +40,7 @@
     "ionicons": "3.0.0",
     "moment": "^2.22.1",
     "ngrx-store-localstorage": "^5.0.0",
+    "platform": "^1.3.5",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -53,13 +53,12 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   }
