--- a/release-signing.properties
+++ b/release-signing.properties
@@ -1,5 +1,5 @@
 
 storePassword=123456
 keyPassword=123456
-keyAlias=my-key-alias
-storeFile=my-release-key.keystore
+keyAlias=upload
+storeFile=keystore.jks
