--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ngrx/store-devtools": "^5.2.0",
     "angularfire2": "^5.0.0-rc.11",
     "cordova-android": "6.4.0",
-    "cordova-ios": "4.5.5",
+    "cordova-ios": "5.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -58,8 +58,8 @@
       "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
